classDiagram
    class ProfilerTask {
        +String id
        +String connection_id
        +Integer user_id
        +String type
        +String status
        +String cluster_name
        +String namespace
        +String pod_name
        +String mode
        +String event
        +Integer duration
        +String format
        +String output_path
        +Integer progress
        +String message
        +DateTime created_at
        +DateTime updated_at
    }

    class ProfilerService {
        +create_task(connection_id, type, event, duration) Task
        +start_task(task_id) Bool
        +stop_task(task_id) Bool
        +get_task_status(task_id) Dict
        +list_tasks(connection_id, user_id) List~Task~
    }

    class ProfilerWorkflow {
        +start_cpu_profiling(connection, duration, output_path) Bool
        +start_event_profiling(connection, event, duration, output_path) Bool
        +stop_profiling(connection) Bool
        +get_progress(connection) Integer
    }

    class AgentToolGateway {
        +register_tool(name, handler, description, parameters, risk_level) Void
        +execute_tool(tool_name, params, user_id, context) Dict
        +get_tool_definitions() List~Dict~
    }

    ProfilerService --> ProfilerTask : 管理
    ProfilerService --> ProfilerWorkflow : 调用
    AgentToolGateway --> ProfilerService : 注册工具
